--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "jquery-bridget": "^3.0.1",
     "masonry-layout": "^4.2.2",
     "swiper": "^8.0.6"
   }
