--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "gsap": "^3.11.5",
     "imagesloaded": "^5.0.0",
     "isotope-layout": "^3.0.6",
+    "luxy.js": "^0.1.0",
     "masonry-layout": "^4.2.2",
     "swiper": "^8.0.6"
   }
