--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sass-loader": "^12.1.0"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.13",
     "bootstrap": "^5.1.3",
     "gsap": "^3.11.5",
     "imagesloaded": "^5.0.0",
