--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sass-loader": "^12.1.0"
   },
   "dependencies": {
+    "@fancyapps/ui": "^5.0.36",
     "@studio-freight/lenis": "^1.0.13",
     "bootstrap": "^5.1.3",
     "gsap": "^3.11.5",
